<resources>
    <string name="app_name">lugares</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    
    <string name="msg_nombre">Nombre del lugar</string>
    <string name="msg_Correo">Correo (xxxx@xxxx.xxx)</string>
    <string name="msg_Telefono">Teléfono (9999-9999)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_Agregar">Agregar</string>
    <string name="bt_Actualizar">Actualizar</string>
    
    <string name="msgLugarAgregado">Lugar Agregado con exito</string>
    <string name="msgFaltanDatos">Faltan datos</string>

    <string name="msgLugarActualizado">Lugar Actualizado con exito</string>

    <string name="menu_delete">Eliminar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="msgDeleted">Se elimino</string>
    <string name="confirmarEliminar">Confirma que desea eliminar el lugar</string>

    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="altura">Altura</string>

    <string name="msg_datos">No hay datos</string>
    <string name="msg_saludos">Hola</string>
    <string name="msg_mensaje_correo">Saludos</string>
    <string name="error">No Aplica</string>

    //Semana 9-10
    <string name="msgEscucharAudio">Escuchar nota de audio</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="graba_pausa">Graba o pausa grabación</string>
    <string name="escuchaPlay">Escucha grabación</string>
    <string name="delete_nota">Borra nota de audio</string>
    <string name="play_nota">Escuchar nota de audio</string>
    <string name="rec_stop_nota">Graba o detiene nota de audio</string>
    <string name="take_photo">Toma foto</string>
    <string name="rotate_l">Rota izquierda</string>
    <string name="rotale_r">Rota a la derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo Nota Audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
</resources>