<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.lugar.UpdateLugarFragment">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_Correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_Telefono"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_web"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_Actualizar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_email"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btnPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_phone" />

            <ImageButton
                android:id="@+id/btnWhatsApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/whatsapp" />

            <ImageButton
                android:id="@+id/btnWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/web" />

            <ImageButton
                android:id="@+id/btPlay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/msgEscucharAudio"
                android:minHeight="48dp"
                android:src="@drawable/ic_play" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_latitud"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_longitud"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_altura"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />

            <ImageButton
                android:id="@+id/btnLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_location" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:contentDescription="@string/msg_imagen"
            android:scaleType="centerInside"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/msgMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_accion"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/rec_stop_nota"
                android:src="@drawable/ic_mic"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/bt_play"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/play_nota"
                android:src="@drawable/ic_play" />

            <ImageButton
                android:id="@+id/bt_delete"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/delete_nota"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_photo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/take_photo"
                android:src="@drawable/ic_photo" />

            <ImageButton
                android:id="@+id/bt_rota_l"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/rotate_l"
                android:src="@drawable/ic_rotate_l" />

            <ImageButton
                android:id="@+id/bt_rota_r"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/rotale_r"
                android:src="@drawable/ic_rotate_r" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>